cabal-version:          2.2
name:                   tlug-website
version:                0.0.0.0
synopsis:               The Tokyo Linux Users' Group Website
homepage:               https://github.com/tlug/tlug.jp#readme
license:                CC-BY-4.0
license-file:           LICENSE.md
author:                 Curt J. Sampson et al.
maintainer:             https://github.com/tlug/tlug.jp/issues
copyright:              2019 Curt J. Sampson et al.
category:               website
build-type:             Simple
extra-source-files:     README.md

common deps
    default-language:   Haskell2010
    ghc-options:        -threaded
    build-depends:      base >= 4.7 && < 5,
                        hakyll,
                        filepath

executable site
    import:             deps
    main-is:            site.hs
