cabal-version:          2.2
name:                   tlug-website
version:                0.0.0.0
synopsis:               The Tokyo Linux Users' Group Website
homepage:               https://github.com/tlug/tlug.jp#readme
license:                CC-BY-4.0
license-file:           LICENSE.md
author:                 Curt J. Sampson et al.
maintainer:             https://github.com/tlug/tlug.jp/issues
copyright:              2019 Curt J. Sampson et al.
category:               website
build-type:             Simple
extra-source-files:     README.md

common deps
    default-language:   Haskell2010
    ghc-options:        -threaded -Werror -fwarn-incomplete-patterns
    build-depends:      base >= 4.7 && < 5,
                        hakyll,
                        filepath

executable site-compiler
    import:             deps
    main-is:            app/SiteCompiler.hs

test-suite test
    import:             deps
    type:               exitcode-stdio-1.0
    main-is:            ../app/Test.hs
    build-depends:      HTF
    hs-source-dirs:     src/
    other-modules:      TLUG.Hello, TLUG.HelloTest
                      , TLUG.MediaWiki, TLUG.MediaWikiTest
